samples/_failures_safe/1761075018_888a59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eed13c64.c: In function ‘main’:
./samples/SAFE/__tmp_eed13c64.c:153:21: error: expected declaration or statement at end of input
  153 |                     }
      |                     ^
./samples/SAFE/__tmp_eed13c64.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eed13c64.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eed13c64.c:153:21: error: expected declaration or statement at end of input
